--- a/center/flexBox.html
+++ b/center/flexBox.html
@@ -9,11 +9,14 @@
     <title>flex Box</title>
 </head>
 <body>
-    <div class="parent">
-        <div class="child" style="background-color: #00B7FF"></div>
-        <div class="child" style="background-color: #219161"></div>
-        <div class="child" style="background-color: #0000FF"></div>
-        <div class="child" style="background-color: #219161"></div>
-    </div>
+ <div class="parent">
+     <div class="child" style="background-color: #00B7FF"></div>
+     <div class="child" style="background-color: #219161"></div>
+     <div class="child" style="background-color: #0000FF"></div>
+     <div class="child" style="background-color: #219161">5555</div>
+ </div>
+<!--<div>
+    <input type="text">
+</div>-->
 </body>
 </html>
