--- a/center/flexBox.html
+++ b/center/flexBox.html
@@ -10,10 +10,19 @@
 </head>
 <body>
  <div class="parent">
-     <div class="child" style="background-color: #00B7FF"></div>
-     <div class="child" style="background-color: #219161"></div>
-     <div class="child" style="background-color: #0000FF"></div>
-     <div class="child" style="background-color: #219161">5555</div>
+     <div class="child_1" style="background-color: #00B7FF;order: 5">1</div>
+     <div class="child" style="background-color: #219161;order: 4">2</div>
+     <div class="child" style="background-color: #0000FF">3</div>
+     <div class="child" style="background-color: #219161">4</div>
+     <div class="child" style="background-color: #219161;order: 3">5</div>
+     <div class="child" style="background-color: #219161;order:2">6</div>
+     <div class="child" style="background-color: #219161">7</div>
+     <div class="child" style="background-color: #219161">8</div>
+
+     <div class="child" style="background-color: #219161">4</div>
+     <div class="child" style="background-color: #219161">4</div>
+     <div class="child" style="background-color: #219161">4</div>
+
  </div>
 <!--<div>
     <input type="text">
