解决外边距折叠问题

--- a/zishiying/lianglie.html
+++ b/zishiying/lianglie.html
@@ -9,7 +9,9 @@
     <title>两列布局 左边定长右边自适应</title>
 </head>
 <body>
-<div class="left">定宽</div>
-<div class="right">自适应</div>
+<div class="parent">
+    <div class="left">定宽</div>
+    <div class="right">自适应</div>
+</div>
 </body>
 </html>
