--- a/zishiying/dinggao.html
+++ b/zishiying/dinggao.html
@@ -11,6 +11,7 @@
 <body>
 <div class="parent">
     <div class="top"></div>
+    <div class="content"></div>
     <div class="bottom">fkjsdfjsk</div>
 </div>
 </body>
